--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ h1 {
     padding-right: 15px;
 }
 
-
+/* 
 .badge.css, .progress-bar.css {
     background: #000000;
     color: #ffffff;
@@ -133,9 +133,15 @@ h1 {
 
 .badge.vue, .progress-bar.vue {
     background: #4caf50;
+}  */
+
+.progress-bar {
+    accent-color: yellow;
 }
 
-
+.badge{
+    color: #007acc;
+}
 
 footer{
     display: flex;
